[package]
name = "fanova"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of fANOVA (functional analysis of variance)"
homepage = "https://github.com/sile/fanova"
repository = "https://github.com/sile/fanova"
readme = "README.md"
categories = ["science"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
coveralls = {repository = "sile/fanova"}

[dependencies]
itertools = "0.10"
ordered-float = "3"
rand = "0.8"
rayon = "1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
criterion = "0.3"

[[bench]]
name = "quantify_importance"
harness = false
