[package]
name = "fanova"
version = "0.2.0"
edition = "2024"
description = "A Rust implementation of fANOVA (functional analysis of variance)"
homepage = "https://github.com/sile/fanova"
repository = "https://github.com/sile/fanova"
readme = "README.md"
categories = ["science"]
license = "MIT"

[dependencies]
rand = "0.10"
rayon = "1"
